# ClarifyingConcurrency

./: .gitignore  0. Notes.md  0. Why I Quit.md  1. Preface.md  10. Concurrent Failure.md  10. What are Effects.md  11. Effects.md  11. What are Effects.md  12. Structured Concurrency.md  2. Why are We Doing This.md  3. The Python Rust Connection.md  4. Context Managers.md  4. Context Managers.md.tmp  4. Python Context Managers.md  5. Cancellation in Concurrency.md  5.! Python Subinterpreters.md  6. Task Groups.md  7. Cancellation.md  8. Python Threads vs OS Threads.md  9. Single vs Multi-threaded.md  A1. Golang and the Simplest Approach.md  A3. Foundations of Concurrency.md  A3. Operating System Processes.md  A3. Pycon Tutorial Description.md  A4. Pycon Tutorial Description.md  A4. Structured Concurrency in Python.md  A5. Functional Error Handling.md  A6. Objects Without Inheritance.md  Great Things about Rust.md  LICENSE  Python 3.11 asyncio Task Groups.md  README.md  The Goal of this Blog.md  What are Effects.md  X1. Foundations of Concurrency.md  X2. Structured Concurrency in Python.md  X3. Functional Error Handling.md  cancellation-in-concurrency.md  check_code_listings.py  check_markdown.py  (+13 more)
markdown_utils/: __init__.py  check_code_listings.py  check_markdown.py  markdown_file.py  renumber_files.py  tools.py
tests/: test_numbered_file.py  test_renumber_files.py
