[project]
name = "clarifyingconcurrency"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruce Eckel", email = "MindviewInc@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.7.0",
    "pytest>=7.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true
